update the api to separate the commanded mode from the acheived and observed mode.
